tests/NormalTests/paczka1/fuzzy1/64621281.err
Error in line 2: c8P7csg S420 39,2
Error in line 6: c8P7csg S42 172,5
Error in line 8: c8P7csg A373 77,3
Error in line 22: A935 A935 25,2
Error in line 31: c8P7csg A373 13,77
Error in line 32: c8P7csg A373 62,1
Error in line 30: Pxy S420 36,2
Error in line 33: c8P7csg A840 34,5
